# advent-of-code-2020

./: Makefile  README.md  day6.rb  docker-compose.test.yml  docker-compose.yml  gen10.rb  p.rb
api_server/: Cargo.toml  Dockerfile
api_server/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  lib.rs  main.rs
encore/: Cargo.toml  all.sh  all.txt  diff.sh  fmt.sh  prep.sh
encore/src/: common.rs  day1.rs  day10.rs  day11.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs  template.rs
encore/src/common/: parser.rs
fast/: 1.rb  10.rb  11.rb  12.rb  13.rb  14.rb  15.rb  16.rb  18-terrible.rb  18.rb  19.rb  20.rb  21.rb  22.rb  23.rb  24.rb  25.rb  5.rb  8.rb  9.rb  day10.rb  day11.rb  day12.rb  day7.rb  day8.rb  day9.rb  lib.rb
rustfast/: Cargo.toml
rustfast/src/: common.rs  day12.rs  day15.rs  day17.rs  day18.rs  day19.rs  day23.rs  main.rs
rustfast/src/common/: complex.rs
script/: server  test
solver/: Cargo.toml  README.md
web/public/: index.html
web/src/: App.tsx  Day.css  Day.tsx  Day1.tsx  Day2.tsx  Day3.tsx  Day4.tsx  Day5.tsx  DayNG.tsx  DayProps.tsx  PartButtons.tsx  index.tsx
