[package]
name = "api_server"
version = "0.2.0"
authors = ["Matt Burke <spraints@gmail.com>", "Yale Cason <yale.cason@gmail.com>", "Mike Farrell <mrmikefarrell@gmail.com>"]

[dependencies]
rocket = "0.4.6"
rocket_contrib = { version = "*", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "0.6.1"
